--- a/index.html
+++ b/index.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Calculadora</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <main class="calc">
-    <div class="topbar">
-      <div class="title">Calculadora</div>
-      <div class="hint">Teclado: 0–9 • + − × ÷ • Enter • Esc</div>
-    </div>
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="app">
+      <h1 class="sr-only">Calculadora</h1>
 
-    <section class="display">
-      <div id="history" class="history"></div>
-      <div id="screen" class="screen">0</div>
-    </section>
+      <div class="calc" role="application" aria-label="Calculadora">
+        <div class="display" aria-live="polite">
+          <div class="history" id="history"></div>
+          <input
+            id="result"
+            class="result"
+            type="text"
+            inputmode="decimal"
+            autocomplete="off"
+            aria-label="Visor da calculadora"
+            readonly
+            value="0"
+          />
+        </div>
 
-    <section class="keys">
-      <button class="key util danger" data-action="clear">C</button>
-      <button class="key util" data-action="backspace">⌫</button>
-      <button class="key util" data-action="toggle-sign">±</button>
-      <button class="key op" data-op="/">÷</button>
+        <div class="keys" role="group" aria-label="Teclas">
+          <button data-action="clear" class="key key--util">AC</button>
+          <button data-action="del" class="key key--util">DEL</button>
+          <button data-value="%" class="key key--op">%</button>
+          <button data-value="÷" class="key key--op">÷</button>
 
-      <button class="key" data-num="7">7</button>
-      <button class="key" data-num="8">8</button>
-      <button class="key" data-num="9">9</button>
-      <button class="key op" data-op="*">×</button>
+          <button data-value="7" class="key">7</button>
+          <button data-value="8" class="key">8</button>
+          <button data-value="9" class="key">9</button>
+          <button data-value="×" class="key key--op">×</button>
 
-      <button class="key" data-num="4">4</button>
-      <button class="key" data-num="5">5</button>
-      <button class="key" data-num="6">6</button>
-      <button class="key op" data-op="-">−</button>
+          <button data-value="4" class="key">4</button>
+          <button data-value="5" class="key">5</button>
+          <button data-value="6" class="key">6</button>
+          <button data-value="−" class="key key--op">−</button>
 
-      <button class="key" data-num="1">1</button>
-      <button class="key" data-num="2">2</button>
-      <button class="key" data-num="3">3</button>
-      <button class="key op" data-op="+">+</button>
+          <button data-value="1" class="key">1</button>
+          <button data-value="2" class="key">2</button>
+          <button data-value="3" class="key">3</button>
+          <button data-value="+" class="key key--op">+</button>
 
-      <button class="key span-2" data-num="0">0</button>
-      <button class="key" data-num=".">.</button>
-      <button class="key success" data-action="equals">=</button>
-    </section>
-  </main>
+          <button data-action="invert" class="key">±</button>
+          <button data-value="0" class="key">0</button>
+          <button data-value="." class="key">,</button>
+          <button data-action="equals" class="key key--equals">=</button>
+        </div>
+      </div>
 
-  <script src="script.js"></script>
-</body>
+      <footer class="footer">
+        <span>Feito com HTML • CSS • JS</span>
+      </footer>
+    </main>
+
+    <script src="script.js"></script>
+  </body>
 </html>
